--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "next": "12.2.0",
+    "nextjs-redirect": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5"
   },
